# thesis_sentiment_analysis

./: Untitled2.ipynb  environment.yml  finetuning_bert_practice.ipynb  prepare_data_and_clean.ipynb  pyproject.toml  segment.py  text_preprocessing.py  thesis_data.xlsx  thesis_sentiment_analysis_data.xlsx
count_vectorizer/: finetuning_bert_practice.ipynb  model.py
transfer_learning/: Object_detection.ipynb  model_analyzer.ipynb  tensorflow_transfer_learning_demo.ipynb  transfer_learning.ipynb
transformer_investigation/: distilled_bert.py
vnnlp/: text_preprocessing.ipynb
vnnlp/data/: country_l_name  country_s_name  vn_dict  vn_family_names  vn_first_sent_words  vn_locations  vn_middle_names  vnese_preprocessing.ipynb  world_company
