[tool.poetry]
name = "thesis_sentiment_analysis"
version = "0.1.0"
description = ""
authors = ["Đinh Thanh Tài <tai.dinh@tiki.vn>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
transformers = "^4.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
